# stockadvisor-ai

./: .gitignore  LICENSE  README.md
cli/: Dockerfile  README.md
cli/src/: main.py
stockadvisor-api/: Dockerfile  README.md  requirements.txt
stockadvisor-api/src/: agent.py  main.py  models.py  portfolio.py  tools.py
yfinance-mcp/: Dockerfile  README.md  pyproject.toml  requirements.txt
yfinance-mcp/src/yfmcp/: server.py  types.py
