[project]
name = "yfmcp"
version = "0.1.0"
description = "Yahoo Finance MCP server"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "mcp[cli]>=1.9.0",
    "tabulate>=0.9.0",
    "yfinance>=0.2.55"
]

[project.scripts]
yfmcp = "yfmcp.server:main"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
